<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- SETUP -->
    <string name="setup_title">Setări inițiale</string>
    <string name="action_next">Înainte</string>
    <string name="materii_setup">Alege materiile tale din lista următoare. Dacă materia ta nu există în listă, o vei putea adăuga mai târziu</string>

    <string-array name="materii_default">
        <item>Română</item>
        <item>Franceză</item>
        <item>Engleză</item>
        <item>Germană</item>
        <item>Matematică</item>
        <item>Fizică</item>
        <item>Biologie</item>
        <item>Chimie</item>
        <item>Informatică</item>
        <item>TIC</item>
        <item>Istorie</item>
        <item>Geografie</item>
        <item>Logică</item>
        <item>Psihologie</item>
        <item>Filozofie</item>
        <item>Muzică</item>
        <item>Desen</item>
        <item>Sport</item>
        <item>Religie</item>
        <item>Economie</item>
        <item>Educație Antreprenorială</item>
    </string-array>
    <!-- GENERAL FRAGMENT -->
    <string name="medie_generala">Media generală</string>
    <string name="purtare">Purtare</string>
    <string name="modifica_purtarea">Modifică nota la purtare</string>

    <!-- NOTE DETAIL -->
    <string name="daca_teza">Dacă iei în teză</string>
    <string name="pentru_media">Pentru media</string>
    <string name="trebuie_sa_iei">Trebuie să iei cel puțin</string>
    <string name="warning_no_note">Trebuie să ai cel puțin o notă ca să poți vedea de ce note ai nevoie pentru diferite medii.</string>
    <string name="cu_teza">Calculează în funcție de posibila notă la teză</string>
    <string name="note">Note</string>
    <string name="medie">Medie</string>
    <string name="teza">Teza</string>
    <string name="add_teza_dialog_fragment_title">Nota la teză pentru</string>
    <string name="add_teza">Adaugă teză</string>
    <string name="modify_teza">Modifică teza</string>
    <string name="add_nota_materie_error">Nu ai nicio materie în acest moment. După ce adaugi o materie, vei putea adăuga și note</string>
    <string name="add_nota">Adaugă o notă</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <!-- MATERII -->
    <string name="add_materie">Adaugă o materie</string>
    <string name="add_materie_edit_text_hint">Numele materiei</string>
    <!-- ABSENTE -->
    <string name="absente_suficiente">Numărul tău de absențe este mai mic decât maximul stabilit în setări.</string>
    <string name="scutiri_necesare">Scutiri necesare</string>
    <string name="calculeaza_absente">Ce scutiri trebuie sa aduci</string>
    <!-- EDIT -->
    <string name="rename">Redenumește</string>
    <string name="delete">Șterge</string>
    <!-- ADD -->
    <string name="add_title">Ce vrei să adaugi?</string>

    <string-array name="add_options">
        <item>Notă</item>
        <item>Absență</item>
        <item>Scutire</item>
        <item>Materie</item>
    </string-array>
    <!-- LOREM -->
    <string name="lorem_short">Lorem ipsum dolor</string>
    <string name="lorem_nota">10.00</string>
    <!-- TAB NAMES -->
    <string-array name="tab_names">
        <item>General</item>
        <item>Note</item>
        <item>Absente</item>
    </string-array>

    <string name="general_section">General</string>
    <string name="note_section">Note</string>
    <string name="absente_section">Absente</string>
    <!-- GENERAL -->
    <string name="app_name">Carnetul de note</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
